@@ -7,6 +7,7 @@ CHANGELOG
   * Add russian translation
   * Track4k auto zoom fixes
   * Improvements in video zoom
+  * Bug fixed in footprints plugin
 
 * Paella 5.3.6
 
